// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job reschedule modal tests test job reschedule modal 1`] = `
<JobsRescheduleModal
  actionType="Job Reschedule"
  handleModalToggle={[MockFunction]}
  isModalOpen={true}
  job={
    Object {
      "callbackEndpoint": "http://localhost:8080/management/jobs/travels/instances/5c56eeff-4cbf-3313-a325-4c895e0afced/timers/6e74a570-31c8-4020-bd70-19be2cb625f3_0",
      "expirationTime": "2020-08-27T03:35:50.147Z",
      "id": "6e74a570-31c8-4020-bd70-19be2cb625f3_0",
      "lastUpdate": "2020-08-27T03:35:50.147Z",
      "priority": 0,
      "processId": "travels",
      "processInstanceId": "5c56eeff-4cbf-3313-a325-4c895e0afced",
      "repeatInterval": 1,
      "repeatLimit": 3,
      "retries": 0,
      "rootProcessId": "5c56eeff-4cbf-3313-a325-4c895e0afced",
      "scheduledId": "0",
      "status": "EXECUTED",
    }
  }
  modalAction={
    Array [
      <Button
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  modalTitle={
    <React.Fragment>
      <InfoCircleIcon
        className="pf-u-mr-sm"
        color="var(--pf-global--info-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
      Jobs Reschedule
    </React.Fragment>
  }
>
  <Modal
    actions={
      Array [
        <Button
          id="apply-button"
          onClick={[Function]}
          variant="primary"
        >
          Apply
        </Button>,
        <Button
          variant="secondary"
        >
          Cancel
        </Button>,
      ]
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label="Job Reschedule modal"
    aria-labelledby="Job Reschedule modal"
    className=""
    data-ouia-component-type="job-reschedule-modal"
    data-ouia-safe={true}
    hasNoBodyWrapper={false}
    header={
      <React.Fragment>
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        Jobs Reschedule
      </React.Fragment>
    }
    isOpen={true}
    onClose={[MockFunction]}
    ouiaSafe={true}
    showClose={true}
    title=""
    titleIconVariant={null}
    titleLabel=""
    variant="small"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-2"
                aria-label="Job Reschedule modal"
                aria-labelledby="pf-modal-part-0 Job Reschedule modal"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="OUIA-Generated-Modal-small-1"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-0"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-u-mr-sm"
                    fill="var(--pf-global--info-color--100)"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                  Jobs Reschedule
                </header>
                <div
                  class="pf-c-modal-box__body"
                  data-ouia-component-type="job-reschedule-modal"
                  data-ouia-safe="true"
                  id="pf-modal-part-2"
                >
                  <div
                    class="pf-c-modal-box__body kogito-management-console--jobsModal__ModalBody"
                  >
                    <form
                      class="pf-c-form pf-m-horizontal"
                      novalidate=""
                    >
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="horizontal-form-name"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Expiration Time
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-primary kogito-management-console--jobsModal__TimeNow"
                            data-ouia-component-id="OUIA-Generated-Button-primary-1"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            id="Time-now"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                              />
                            </svg>
                             Now
                          </button>
                          
                        </div>
                      </div>
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="repeat-interval"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Repeat Interval
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-describedby="repeat-interval"
                            aria-invalid="false"
                            class="pf-c-form-control"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                            data-ouia-component-type="PF4/TextInput"
                            data-ouia-safe="true"
                            id="repeat-interval-input"
                            name="repeat-interval-input"
                            type="text"
                            value="1"
                          />
                          
                        </div>
                      </div>
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="repeat-limit"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Repeat Limit
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-describedby="repeat-limit"
                            aria-invalid="false"
                            class="pf-c-form-control"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                            data-ouia-component-type="PF4/TextInput"
                            data-ouia-safe="true"
                            id="repeat-limit-input"
                            name="repeat-limit-input"
                            type="text"
                            value="3"
                          />
                          
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    id="apply-button"
                    type="button"
                  >
                    Apply
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              id="apply-button"
              onClick={[Function]}
              variant="primary"
            >
              Apply
            </Button>,
            <Button
              variant="secondary"
            >
              Cancel
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label="Job Reschedule modal"
        aria-labelledby="Job Reschedule modal"
        boxId="pf-modal-part-0"
        className=""
        data-ouia-component-type="job-reschedule-modal"
        data-ouia-safe={true}
        descriptorId="pf-modal-part-2"
        hasNoBodyWrapper={false}
        header={
          <React.Fragment>
            <InfoCircleIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--info-color--100)"
              noVerticalAlign={false}
              size="sm"
            />
            Jobs Reschedule
          </React.Fragment>
        }
        isOpen={true}
        labelId="pf-modal-part-1"
        onClose={[MockFunction]}
        ouiaId="OUIA-Generated-Modal-small-1"
        ouiaSafe={true}
        showClose={true}
        title=""
        titleIconVariant={null}
        titleLabel=""
        variant="small"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
              preventScrollOnDeactivate={false}
            >
              <div
                className="pf-l-bullseye"
              >
                <ModalBox
                  aria-describedby="pf-modal-part-2"
                  aria-label="Job Reschedule modal"
                  aria-labelledby="pf-modal-part-0 Job Reschedule modal"
                  className=""
                  data-ouia-component-id="OUIA-Generated-Modal-small-1"
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe={true}
                  id="pf-modal-part-0"
                  style={Object {}}
                  variant="small"
                >
                  <div
                    aria-describedby="pf-modal-part-2"
                    aria-label="Job Reschedule modal"
                    aria-labelledby="pf-modal-part-0 Job Reschedule modal"
                    aria-modal="true"
                    className="pf-c-modal-box pf-m-sm"
                    data-ouia-component-id="OUIA-Generated-Modal-small-1"
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-0"
                    role="dialog"
                    style={Object {}}
                  >
                    <ModalBoxCloseButton
                      onClose={[MockFunction]}
                    >
                      <Button
                        aria-label="Close"
                        className=""
                        onClick={[MockFunction]}
                        variant="plain"
                      >
                        <ButtonBase
                          aria-label="Close"
                          className=""
                          innerRef={null}
                          onClick={[MockFunction]}
                          variant="plain"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="Close"
                            className="pf-c-button pf-m-plain"
                            data-ouia-component-id="OUIA-Generated-Button-plain-1"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[MockFunction]}
                            role={null}
                            type="button"
                          >
                            <TimesIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 352 512"
                                width="1em"
                              >
                                <path
                                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                />
                              </svg>
                            </TimesIcon>
                          </button>
                        </ButtonBase>
                      </Button>
                    </ModalBoxCloseButton>
                    <ModalBoxHeader
                      help={null}
                    >
                      <header
                        className="pf-c-modal-box__header"
                      >
                        <InfoCircleIcon
                          className="pf-u-mr-sm"
                          color="var(--pf-global--info-color--100)"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            className="pf-u-mr-sm"
                            fill="var(--pf-global--info-color--100)"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                            />
                          </svg>
                        </InfoCircleIcon>
                        Jobs Reschedule
                      </header>
                    </ModalBoxHeader>
                    <ModalBoxBody
                      data-ouia-component-type="job-reschedule-modal"
                      data-ouia-safe={true}
                      id="pf-modal-part-2"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        data-ouia-component-type="job-reschedule-modal"
                        data-ouia-safe={true}
                        id="pf-modal-part-2"
                      >
                        <ModalBoxBody
                          className="kogito-management-console--jobsModal__ModalBody"
                        >
                          <div
                            className="pf-c-modal-box__body kogito-management-console--jobsModal__ModalBody"
                          >
                            <Form
                              isHorizontal={true}
                            >
                              <form
                                className="pf-c-form pf-m-horizontal"
                                noValidate={true}
                              >
                                <FormGroup
                                  fieldId="horizontal-form-name"
                                  label="Expiration Time"
                                >
                                  <div
                                    className="pf-c-form__group"
                                  >
                                    <div
                                      className="pf-c-form__group-label"
                                    >
                                      <label
                                        className="pf-c-form__label"
                                        htmlFor="horizontal-form-name"
                                      >
                                        <span
                                          className="pf-c-form__label-text"
                                        >
                                          Expiration Time
                                        </span>
                                      </label>
                                       
                                    </div>
                                    <div
                                      className="pf-c-form__group-control"
                                    >
                                      <DateTimePicker
                                        calendarIcon={
                                          <svg
                                            className="react-datetime-picker__calendar-button__icon react-datetime-picker__button__icon"
                                            height={19}
                                            stroke="black"
                                            strokeWidth={2}
                                            viewBox="0 0 19 19"
                                            width={19}
                                            xmlns="http://www.w3.org/2000/svg"
                                          />
                                        }
                                        clearIcon={
                                          <svg
                                            className="react-datetime-picker__clear-button__icon react-datetime-picker__button__icon"
                                            height={19}
                                            stroke="black"
                                            strokeWidth={2}
                                            viewBox="0 0 19 19"
                                            width={19}
                                            xmlns="http://www.w3.org/2000/svg"
                                          />
                                        }
                                        closeWidgets={true}
                                        isCalendarOpen={null}
                                        isClockOpen={null}
                                        maxDetail="minute"
                                        minDate={2017-02-02T12:54:59.218Z}
                                        onChange={[Function]}
                                        openWidgetsOnFocus={true}
                                        value={2020-08-27T03:35:50.147Z}
                                      />
                                      <Button
                                        className="kogito-management-console--jobsModal__TimeNow"
                                        id="Time-now"
                                        onClick={[Function]}
                                      >
                                        <ButtonBase
                                          className="kogito-management-console--jobsModal__TimeNow"
                                          id="Time-now"
                                          innerRef={null}
                                          onClick={[Function]}
                                        >
                                          <button
                                            aria-disabled={false}
                                            aria-label={null}
                                            className="pf-c-button pf-m-primary kogito-management-console--jobsModal__TimeNow"
                                            data-ouia-component-id="OUIA-Generated-Button-primary-1"
                                            data-ouia-component-type="PF4/Button"
                                            data-ouia-safe={true}
                                            disabled={false}
                                            id="Time-now"
                                            onClick={[Function]}
                                            role={null}
                                            type="button"
                                          >
                                            <OutlinedClockIcon
                                              color="currentColor"
                                              noVerticalAlign={false}
                                              size="sm"
                                            >
                                              <svg
                                                aria-hidden={true}
                                                aria-labelledby={null}
                                                fill="currentColor"
                                                height="1em"
                                                role="img"
                                                style={
                                                  Object {
                                                    "verticalAlign": "-0.125em",
                                                  }
                                                }
                                                viewBox="0 0 512 512"
                                                width="1em"
                                              >
                                                <path
                                                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                                                />
                                              </svg>
                                            </OutlinedClockIcon>
                                             Now
                                          </button>
                                        </ButtonBase>
                                      </Button>
                                    </div>
                                  </div>
                                </FormGroup>
                                <FormGroup
                                  fieldId="repeat-interval"
                                  helperText={null}
                                  label="Repeat Interval"
                                >
                                  <div
                                    className="pf-c-form__group"
                                  >
                                    <div
                                      className="pf-c-form__group-label"
                                    >
                                      <label
                                        className="pf-c-form__label"
                                        htmlFor="repeat-interval"
                                      >
                                        <span
                                          className="pf-c-form__label-text"
                                        >
                                          Repeat Interval
                                        </span>
                                      </label>
                                       
                                    </div>
                                    <div
                                      className="pf-c-form__group-control"
                                    >
                                      <TextInput
                                        aria-describedby="repeat-interval"
                                        id="repeat-interval-input"
                                        isDisabled={false}
                                        name="repeat-interval-input"
                                        onChange={[Function]}
                                        type="text"
                                        value={1}
                                      >
                                        <TextInputBase
                                          aria-describedby="repeat-interval"
                                          aria-label={null}
                                          className=""
                                          id="repeat-interval-input"
                                          innerRef={null}
                                          isDisabled={false}
                                          isLeftTruncated={false}
                                          isReadOnly={false}
                                          isRequired={false}
                                          name="repeat-interval-input"
                                          onChange={[Function]}
                                          ouiaSafe={true}
                                          type="text"
                                          validated="default"
                                          value={1}
                                        >
                                          <input
                                            aria-describedby="repeat-interval"
                                            aria-invalid={false}
                                            aria-label={null}
                                            className="pf-c-form-control"
                                            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                                            data-ouia-component-type="PF4/TextInput"
                                            data-ouia-safe={true}
                                            disabled={false}
                                            id="repeat-interval-input"
                                            name="repeat-interval-input"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            readOnly={false}
                                            required={false}
                                            type="text"
                                            value={1}
                                          />
                                        </TextInputBase>
                                      </TextInput>
                                    </div>
                                  </div>
                                </FormGroup>
                                <FormGroup
                                  fieldId="repeat-limit"
                                  helperText={null}
                                  label="Repeat Limit"
                                >
                                  <div
                                    className="pf-c-form__group"
                                  >
                                    <div
                                      className="pf-c-form__group-label"
                                    >
                                      <label
                                        className="pf-c-form__label"
                                        htmlFor="repeat-limit"
                                      >
                                        <span
                                          className="pf-c-form__label-text"
                                        >
                                          Repeat Limit
                                        </span>
                                      </label>
                                       
                                    </div>
                                    <div
                                      className="pf-c-form__group-control"
                                    >
                                      <TextInput
                                        aria-describedby="repeat-limit"
                                        id="repeat-limit-input"
                                        isDisabled={false}
                                        name="repeat-limit-input"
                                        onChange={[Function]}
                                        type="text"
                                        value={3}
                                      >
                                        <TextInputBase
                                          aria-describedby="repeat-limit"
                                          aria-label={null}
                                          className=""
                                          id="repeat-limit-input"
                                          innerRef={null}
                                          isDisabled={false}
                                          isLeftTruncated={false}
                                          isReadOnly={false}
                                          isRequired={false}
                                          name="repeat-limit-input"
                                          onChange={[Function]}
                                          ouiaSafe={true}
                                          type="text"
                                          validated="default"
                                          value={3}
                                        >
                                          <input
                                            aria-describedby="repeat-limit"
                                            aria-invalid={false}
                                            aria-label={null}
                                            className="pf-c-form-control"
                                            data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                                            data-ouia-component-type="PF4/TextInput"
                                            data-ouia-safe={true}
                                            disabled={false}
                                            id="repeat-limit-input"
                                            name="repeat-limit-input"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            readOnly={false}
                                            required={false}
                                            type="text"
                                            value={3}
                                          />
                                        </TextInputBase>
                                      </TextInput>
                                    </div>
                                  </div>
                                </FormGroup>
                              </form>
                            </Form>
                          </div>
                        </ModalBoxBody>
                      </div>
                    </ModalBoxBody>
                    <ModalBoxFooter>
                      <footer
                        className="pf-c-modal-box__footer"
                      >
                        <Button
                          id="apply-button"
                          key="apply-selection"
                          onClick={[Function]}
                          variant="primary"
                        >
                          <ButtonBase
                            id="apply-button"
                            innerRef={null}
                            onClick={[Function]}
                            variant="primary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-primary"
                              data-ouia-component-id="OUIA-Generated-Button-primary-2"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              id="apply-button"
                              onClick={[Function]}
                              role={null}
                              type="button"
                            >
                              Apply
                            </button>
                          </ButtonBase>
                        </Button>
                        <Button
                          key="cancel-reschedule"
                          variant="secondary"
                        >
                          <ButtonBase
                            innerRef={null}
                            variant="secondary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-secondary"
                              data-ouia-component-id="OUIA-Generated-Button-secondary-1"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              role={null}
                              type="button"
                            >
                              Cancel
                            </button>
                          </ButtonBase>
                        </Button>
                      </footer>
                    </ModalBoxFooter>
                  </div>
                </ModalBox>
              </div>
            </FocusTrap>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
  <Modal
    actions={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label="Reschedule error modal"
    aria-labelledby="Reschedule error modal"
    className=""
    data-ouia-component-type="job-reschedule-error-modal"
    data-ouia-safe={true}
    hasNoBodyWrapper={false}
    header={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--danger-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Reschedule
        </span>
      </Title>
    }
    isOpen={false}
    onClose={[Function]}
    ouiaSafe={true}
    showClose={true}
    title=""
    titleIconVariant={null}
    titleLabel=""
    variant="small"
  >
    <Portal
      containerInfo={
        <div
          aria-hidden="true"
        />
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              onClick={[Function]}
              variant="primary"
            >
              OK
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label="Reschedule error modal"
        aria-labelledby="Reschedule error modal"
        boxId="pf-modal-part-1"
        className=""
        data-ouia-component-type="job-reschedule-error-modal"
        data-ouia-safe={true}
        descriptorId="pf-modal-part-3"
        hasNoBodyWrapper={false}
        header={
          <Title
            headingLevel="h1"
            size="2xl"
          >
            <InfoCircleIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
              noVerticalAlign={false}
              size="sm"
            />
            <span>
              Job Reschedule
            </span>
          </Title>
        }
        isOpen={false}
        labelId="pf-modal-part-2"
        onClose={[Function]}
        ouiaId="OUIA-Generated-Modal-small-2"
        ouiaSafe={true}
        showClose={true}
        title=""
        titleIconVariant={null}
        titleLabel=""
        variant="small"
      />
    </Portal>
  </Modal>
</JobsRescheduleModal>
`;

exports[`Job reschedule modal tests test reschedule with null interval/limit 1`] = `
<JobsRescheduleModal
  actionType="Job Reschedule"
  handleModalToggle={[MockFunction]}
  isModalOpen={true}
  job={
    Object {
      "callbackEndpoint": "http://localhost:8080/management/jobs/travels/instances/5c56eeff-4cbf-3313-a325-4c895e0afced/timers/6e74a570-31c8-4020-bd70-19be2cb625f3_0",
      "expirationTime": "2020-08-27T03:35:50.147Z",
      "id": "6e74a570-31c8-4020-bd70-19be2cb625f3_0",
      "lastUpdate": "2020-08-27T03:35:50.147Z",
      "priority": 0,
      "processId": "travels",
      "processInstanceId": "5c56eeff-4cbf-3313-a325-4c895e0afced",
      "repeatInterval": null,
      "repeatLimit": null,
      "retries": 0,
      "rootProcessId": "5c56eeff-4cbf-3313-a325-4c895e0afced",
      "scheduledId": "0",
      "status": "EXECUTED",
    }
  }
  modalAction={
    Array [
      <Button
        variant="secondary"
      >
        Cancel
      </Button>,
    ]
  }
  modalTitle={
    <React.Fragment>
      <InfoCircleIcon
        className="pf-u-mr-sm"
        color="var(--pf-global--info-color--100)"
        noVerticalAlign={false}
        size="sm"
      />
      Jobs Reschedule
    </React.Fragment>
  }
>
  <Modal
    actions={
      Array [
        <Button
          id="apply-button"
          onClick={[Function]}
          variant="primary"
        >
          Apply
        </Button>,
        <Button
          variant="secondary"
        >
          Cancel
        </Button>,
      ]
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label="Job Reschedule modal"
    aria-labelledby="Job Reschedule modal"
    className=""
    data-ouia-component-type="job-reschedule-modal"
    data-ouia-safe={true}
    hasNoBodyWrapper={false}
    header={
      <React.Fragment>
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--info-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        Jobs Reschedule
      </React.Fragment>
    }
    isOpen={true}
    onClose={[MockFunction]}
    ouiaSafe={true}
    showClose={true}
    title=""
    titleIconVariant={null}
    titleLabel=""
    variant="small"
  >
    <Portal
      containerInfo={
        <div>
          <div
            class="pf-c-backdrop"
          >
            <div
              class="pf-l-bullseye"
            >
              <div
                aria-describedby="pf-modal-part-4"
                aria-label="Job Reschedule modal"
                aria-labelledby="pf-modal-part-2 Job Reschedule modal"
                aria-modal="true"
                class="pf-c-modal-box pf-m-sm"
                data-ouia-component-id="OUIA-Generated-Modal-small-3"
                data-ouia-component-type="PF4/ModalContent"
                data-ouia-safe="true"
                id="pf-modal-part-2"
                role="dialog"
              >
                <button
                  aria-disabled="false"
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                </button>
                <header
                  class="pf-c-modal-box__header"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-u-mr-sm"
                    fill="var(--pf-global--info-color--100)"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                  Jobs Reschedule
                </header>
                <div
                  class="pf-c-modal-box__body"
                  data-ouia-component-type="job-reschedule-modal"
                  data-ouia-safe="true"
                  id="pf-modal-part-4"
                >
                  <div
                    class="pf-c-modal-box__body kogito-management-console--jobsModal__ModalBody"
                  >
                    <form
                      class="pf-c-form pf-m-horizontal"
                      novalidate=""
                    >
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="horizontal-form-name"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Expiration Time
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-primary kogito-management-console--jobsModal__TimeNow"
                            data-ouia-component-id="OUIA-Generated-Button-primary-3"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            id="Time-now"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 512 512"
                              width="1em"
                            >
                              <path
                                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                              />
                            </svg>
                             Now
                          </button>
                          
                        </div>
                      </div>
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="repeat-interval"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Repeat Interval
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-describedby="repeat-interval"
                            aria-invalid="false"
                            class="pf-c-form-control"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                            data-ouia-component-type="PF4/TextInput"
                            data-ouia-safe="true"
                            disabled=""
                            id="repeat-interval-input"
                            name="repeat-interval-input"
                            type="text"
                            value=""
                          />
                          <div
                            aria-live="polite"
                            class="pf-c-form__helper-text"
                            id="repeat-interval-helper"
                          >
                            Input disabled since it is an one-time run job
                          </div>
                        </div>
                      </div>
                      <div
                        class="pf-c-form__group"
                      >
                        <div
                          class="pf-c-form__group-label"
                        >
                          <label
                            class="pf-c-form__label"
                            for="repeat-limit"
                          >
                            <span
                              class="pf-c-form__label-text"
                            >
                              Repeat Limit
                            </span>
                          </label>
                           
                        </div>
                        <div
                          class="pf-c-form__group-control"
                        >
                          <input
                            aria-describedby="repeat-limit"
                            aria-invalid="false"
                            class="pf-c-form-control"
                            data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                            data-ouia-component-type="PF4/TextInput"
                            data-ouia-safe="true"
                            disabled=""
                            id="repeat-limit-input"
                            name="repeat-limit-input"
                            type="text"
                            value=""
                          />
                          <div
                            aria-live="polite"
                            class="pf-c-form__helper-text"
                            id="repeat-limit-helper"
                          >
                            Input disabled since it is an one-time run job
                          </div>
                        </div>
                      </div>
                    </form>
                  </div>
                </div>
                <footer
                  class="pf-c-modal-box__footer"
                >
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-primary"
                    data-ouia-component-id="OUIA-Generated-Button-primary-4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    id="apply-button"
                    type="button"
                  >
                    Apply
                  </button>
                  <button
                    aria-disabled="false"
                    class="pf-c-button pf-m-secondary"
                    data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    type="button"
                  >
                    Cancel
                  </button>
                </footer>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              id="apply-button"
              onClick={[Function]}
              variant="primary"
            >
              Apply
            </Button>,
            <Button
              variant="secondary"
            >
              Cancel
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label="Job Reschedule modal"
        aria-labelledby="Job Reschedule modal"
        boxId="pf-modal-part-2"
        className=""
        data-ouia-component-type="job-reschedule-modal"
        data-ouia-safe={true}
        descriptorId="pf-modal-part-4"
        hasNoBodyWrapper={false}
        header={
          <React.Fragment>
            <InfoCircleIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--info-color--100)"
              noVerticalAlign={false}
              size="sm"
            />
            Jobs Reschedule
          </React.Fragment>
        }
        isOpen={true}
        labelId="pf-modal-part-3"
        onClose={[MockFunction]}
        ouiaId="OUIA-Generated-Modal-small-3"
        ouiaSafe={true}
        showClose={true}
        title=""
        titleIconVariant={null}
        titleLabel=""
        variant="small"
      >
        <Backdrop>
          <div
            className="pf-c-backdrop"
          >
            <FocusTrap
              active={true}
              className="pf-l-bullseye"
              focusTrapOptions={
                Object {
                  "clickOutsideDeactivates": true,
                }
              }
              paused={false}
              preventScrollOnDeactivate={false}
            >
              <div
                className="pf-l-bullseye"
              >
                <ModalBox
                  aria-describedby="pf-modal-part-4"
                  aria-label="Job Reschedule modal"
                  aria-labelledby="pf-modal-part-2 Job Reschedule modal"
                  className=""
                  data-ouia-component-id="OUIA-Generated-Modal-small-3"
                  data-ouia-component-type="PF4/ModalContent"
                  data-ouia-safe={true}
                  id="pf-modal-part-2"
                  style={Object {}}
                  variant="small"
                >
                  <div
                    aria-describedby="pf-modal-part-4"
                    aria-label="Job Reschedule modal"
                    aria-labelledby="pf-modal-part-2 Job Reschedule modal"
                    aria-modal="true"
                    className="pf-c-modal-box pf-m-sm"
                    data-ouia-component-id="OUIA-Generated-Modal-small-3"
                    data-ouia-component-type="PF4/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-2"
                    role="dialog"
                    style={Object {}}
                  >
                    <ModalBoxCloseButton
                      onClose={[MockFunction]}
                    >
                      <Button
                        aria-label="Close"
                        className=""
                        onClick={[MockFunction]}
                        variant="plain"
                      >
                        <ButtonBase
                          aria-label="Close"
                          className=""
                          innerRef={null}
                          onClick={[MockFunction]}
                          variant="plain"
                        >
                          <button
                            aria-disabled={false}
                            aria-label="Close"
                            className="pf-c-button pf-m-plain"
                            data-ouia-component-id="OUIA-Generated-Button-plain-2"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            onClick={[MockFunction]}
                            role={null}
                            type="button"
                          >
                            <TimesIcon
                              color="currentColor"
                              noVerticalAlign={false}
                              size="sm"
                            >
                              <svg
                                aria-hidden={true}
                                aria-labelledby={null}
                                fill="currentColor"
                                height="1em"
                                role="img"
                                style={
                                  Object {
                                    "verticalAlign": "-0.125em",
                                  }
                                }
                                viewBox="0 0 352 512"
                                width="1em"
                              >
                                <path
                                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                />
                              </svg>
                            </TimesIcon>
                          </button>
                        </ButtonBase>
                      </Button>
                    </ModalBoxCloseButton>
                    <ModalBoxHeader
                      help={null}
                    >
                      <header
                        className="pf-c-modal-box__header"
                      >
                        <InfoCircleIcon
                          className="pf-u-mr-sm"
                          color="var(--pf-global--info-color--100)"
                          noVerticalAlign={false}
                          size="sm"
                        >
                          <svg
                            aria-hidden={true}
                            aria-labelledby={null}
                            className="pf-u-mr-sm"
                            fill="var(--pf-global--info-color--100)"
                            height="1em"
                            role="img"
                            style={
                              Object {
                                "verticalAlign": "-0.125em",
                              }
                            }
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                            />
                          </svg>
                        </InfoCircleIcon>
                        Jobs Reschedule
                      </header>
                    </ModalBoxHeader>
                    <ModalBoxBody
                      data-ouia-component-type="job-reschedule-modal"
                      data-ouia-safe={true}
                      id="pf-modal-part-4"
                    >
                      <div
                        className="pf-c-modal-box__body"
                        data-ouia-component-type="job-reschedule-modal"
                        data-ouia-safe={true}
                        id="pf-modal-part-4"
                      >
                        <ModalBoxBody
                          className="kogito-management-console--jobsModal__ModalBody"
                        >
                          <div
                            className="pf-c-modal-box__body kogito-management-console--jobsModal__ModalBody"
                          >
                            <Form
                              isHorizontal={true}
                            >
                              <form
                                className="pf-c-form pf-m-horizontal"
                                noValidate={true}
                              >
                                <FormGroup
                                  fieldId="horizontal-form-name"
                                  label="Expiration Time"
                                >
                                  <div
                                    className="pf-c-form__group"
                                  >
                                    <div
                                      className="pf-c-form__group-label"
                                    >
                                      <label
                                        className="pf-c-form__label"
                                        htmlFor="horizontal-form-name"
                                      >
                                        <span
                                          className="pf-c-form__label-text"
                                        >
                                          Expiration Time
                                        </span>
                                      </label>
                                       
                                    </div>
                                    <div
                                      className="pf-c-form__group-control"
                                    >
                                      <DateTimePicker
                                        calendarIcon={
                                          <svg
                                            className="react-datetime-picker__calendar-button__icon react-datetime-picker__button__icon"
                                            height={19}
                                            stroke="black"
                                            strokeWidth={2}
                                            viewBox="0 0 19 19"
                                            width={19}
                                            xmlns="http://www.w3.org/2000/svg"
                                          />
                                        }
                                        clearIcon={
                                          <svg
                                            className="react-datetime-picker__clear-button__icon react-datetime-picker__button__icon"
                                            height={19}
                                            stroke="black"
                                            strokeWidth={2}
                                            viewBox="0 0 19 19"
                                            width={19}
                                            xmlns="http://www.w3.org/2000/svg"
                                          />
                                        }
                                        closeWidgets={true}
                                        isCalendarOpen={null}
                                        isClockOpen={null}
                                        maxDetail="minute"
                                        minDate={2017-02-02T12:54:59.218Z}
                                        onChange={[Function]}
                                        openWidgetsOnFocus={true}
                                        value={2020-08-27T03:35:50.147Z}
                                      />
                                      <Button
                                        className="kogito-management-console--jobsModal__TimeNow"
                                        id="Time-now"
                                        onClick={[Function]}
                                      >
                                        <ButtonBase
                                          className="kogito-management-console--jobsModal__TimeNow"
                                          id="Time-now"
                                          innerRef={null}
                                          onClick={[Function]}
                                        >
                                          <button
                                            aria-disabled={false}
                                            aria-label={null}
                                            className="pf-c-button pf-m-primary kogito-management-console--jobsModal__TimeNow"
                                            data-ouia-component-id="OUIA-Generated-Button-primary-3"
                                            data-ouia-component-type="PF4/Button"
                                            data-ouia-safe={true}
                                            disabled={false}
                                            id="Time-now"
                                            onClick={[Function]}
                                            role={null}
                                            type="button"
                                          >
                                            <OutlinedClockIcon
                                              color="currentColor"
                                              noVerticalAlign={false}
                                              size="sm"
                                            >
                                              <svg
                                                aria-hidden={true}
                                                aria-labelledby={null}
                                                fill="currentColor"
                                                height="1em"
                                                role="img"
                                                style={
                                                  Object {
                                                    "verticalAlign": "-0.125em",
                                                  }
                                                }
                                                viewBox="0 0 512 512"
                                                width="1em"
                                              >
                                                <path
                                                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                                                />
                                              </svg>
                                            </OutlinedClockIcon>
                                             Now
                                          </button>
                                        </ButtonBase>
                                      </Button>
                                    </div>
                                  </div>
                                </FormGroup>
                                <FormGroup
                                  fieldId="repeat-interval"
                                  helperText="Input disabled since it is an one-time run job"
                                  label="Repeat Interval"
                                >
                                  <div
                                    className="pf-c-form__group"
                                  >
                                    <div
                                      className="pf-c-form__group-label"
                                    >
                                      <label
                                        className="pf-c-form__label"
                                        htmlFor="repeat-interval"
                                      >
                                        <span
                                          className="pf-c-form__label-text"
                                        >
                                          Repeat Interval
                                        </span>
                                      </label>
                                       
                                    </div>
                                    <div
                                      className="pf-c-form__group-control"
                                    >
                                      <TextInput
                                        aria-describedby="repeat-interval"
                                        id="repeat-interval-input"
                                        isDisabled={true}
                                        name="repeat-interval-input"
                                        onChange={[Function]}
                                        type="text"
                                        value=""
                                      >
                                        <TextInputBase
                                          aria-describedby="repeat-interval"
                                          aria-label={null}
                                          className=""
                                          id="repeat-interval-input"
                                          innerRef={null}
                                          isDisabled={true}
                                          isLeftTruncated={false}
                                          isReadOnly={false}
                                          isRequired={false}
                                          name="repeat-interval-input"
                                          onChange={[Function]}
                                          ouiaSafe={true}
                                          type="text"
                                          validated="default"
                                          value=""
                                        >
                                          <input
                                            aria-describedby="repeat-interval"
                                            aria-invalid={false}
                                            aria-label={null}
                                            className="pf-c-form-control"
                                            data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                                            data-ouia-component-type="PF4/TextInput"
                                            data-ouia-safe={true}
                                            disabled={true}
                                            id="repeat-interval-input"
                                            name="repeat-interval-input"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            readOnly={false}
                                            required={false}
                                            type="text"
                                            value=""
                                          />
                                        </TextInputBase>
                                      </TextInput>
                                      <div
                                        aria-live="polite"
                                        className="pf-c-form__helper-text"
                                        id="repeat-interval-helper"
                                      >
                                        Input disabled since it is an one-time run job
                                      </div>
                                    </div>
                                  </div>
                                </FormGroup>
                                <FormGroup
                                  fieldId="repeat-limit"
                                  helperText="Input disabled since it is an one-time run job"
                                  label="Repeat Limit"
                                >
                                  <div
                                    className="pf-c-form__group"
                                  >
                                    <div
                                      className="pf-c-form__group-label"
                                    >
                                      <label
                                        className="pf-c-form__label"
                                        htmlFor="repeat-limit"
                                      >
                                        <span
                                          className="pf-c-form__label-text"
                                        >
                                          Repeat Limit
                                        </span>
                                      </label>
                                       
                                    </div>
                                    <div
                                      className="pf-c-form__group-control"
                                    >
                                      <TextInput
                                        aria-describedby="repeat-limit"
                                        id="repeat-limit-input"
                                        isDisabled={true}
                                        name="repeat-limit-input"
                                        onChange={[Function]}
                                        type="text"
                                        value=""
                                      >
                                        <TextInputBase
                                          aria-describedby="repeat-limit"
                                          aria-label={null}
                                          className=""
                                          id="repeat-limit-input"
                                          innerRef={null}
                                          isDisabled={true}
                                          isLeftTruncated={false}
                                          isReadOnly={false}
                                          isRequired={false}
                                          name="repeat-limit-input"
                                          onChange={[Function]}
                                          ouiaSafe={true}
                                          type="text"
                                          validated="default"
                                          value=""
                                        >
                                          <input
                                            aria-describedby="repeat-limit"
                                            aria-invalid={false}
                                            aria-label={null}
                                            className="pf-c-form-control"
                                            data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                                            data-ouia-component-type="PF4/TextInput"
                                            data-ouia-safe={true}
                                            disabled={true}
                                            id="repeat-limit-input"
                                            name="repeat-limit-input"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            readOnly={false}
                                            required={false}
                                            type="text"
                                            value=""
                                          />
                                        </TextInputBase>
                                      </TextInput>
                                      <div
                                        aria-live="polite"
                                        className="pf-c-form__helper-text"
                                        id="repeat-limit-helper"
                                      >
                                        Input disabled since it is an one-time run job
                                      </div>
                                    </div>
                                  </div>
                                </FormGroup>
                              </form>
                            </Form>
                          </div>
                        </ModalBoxBody>
                      </div>
                    </ModalBoxBody>
                    <ModalBoxFooter>
                      <footer
                        className="pf-c-modal-box__footer"
                      >
                        <Button
                          id="apply-button"
                          key="apply-selection"
                          onClick={[Function]}
                          variant="primary"
                        >
                          <ButtonBase
                            id="apply-button"
                            innerRef={null}
                            onClick={[Function]}
                            variant="primary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-primary"
                              data-ouia-component-id="OUIA-Generated-Button-primary-4"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              id="apply-button"
                              onClick={[Function]}
                              role={null}
                              type="button"
                            >
                              Apply
                            </button>
                          </ButtonBase>
                        </Button>
                        <Button
                          key="cancel-reschedule"
                          variant="secondary"
                        >
                          <ButtonBase
                            innerRef={null}
                            variant="secondary"
                          >
                            <button
                              aria-disabled={false}
                              aria-label={null}
                              className="pf-c-button pf-m-secondary"
                              data-ouia-component-id="OUIA-Generated-Button-secondary-2"
                              data-ouia-component-type="PF4/Button"
                              data-ouia-safe={true}
                              disabled={false}
                              role={null}
                              type="button"
                            >
                              Cancel
                            </button>
                          </ButtonBase>
                        </Button>
                      </footer>
                    </ModalBoxFooter>
                  </div>
                </ModalBox>
              </div>
            </FocusTrap>
          </div>
        </Backdrop>
      </ModalContent>
    </Portal>
  </Modal>
  <Modal
    actions={
      Array [
        <Button
          onClick={[Function]}
          variant="primary"
        >
          OK
        </Button>,
      ]
    }
    appendTo={[Function]}
    aria-describedby=""
    aria-label="Reschedule error modal"
    aria-labelledby="Reschedule error modal"
    className=""
    data-ouia-component-type="job-reschedule-error-modal"
    data-ouia-safe={true}
    hasNoBodyWrapper={false}
    header={
      <Title
        headingLevel="h1"
        size="2xl"
      >
        <InfoCircleIcon
          className="pf-u-mr-sm"
          color="var(--pf-global--danger-color--100)"
          noVerticalAlign={false}
          size="sm"
        />
        <span>
          Job Reschedule
        </span>
      </Title>
    }
    isOpen={false}
    onClose={[Function]}
    ouiaSafe={true}
    showClose={true}
    title=""
    titleIconVariant={null}
    titleLabel=""
    variant="small"
  >
    <Portal
      containerInfo={
        <div
          aria-hidden="true"
        />
      }
    >
      <ModalContent
        actions={
          Array [
            <Button
              onClick={[Function]}
              variant="primary"
            >
              OK
            </Button>,
          ]
        }
        aria-describedby=""
        aria-label="Reschedule error modal"
        aria-labelledby="Reschedule error modal"
        boxId="pf-modal-part-3"
        className=""
        data-ouia-component-type="job-reschedule-error-modal"
        data-ouia-safe={true}
        descriptorId="pf-modal-part-5"
        hasNoBodyWrapper={false}
        header={
          <Title
            headingLevel="h1"
            size="2xl"
          >
            <InfoCircleIcon
              className="pf-u-mr-sm"
              color="var(--pf-global--danger-color--100)"
              noVerticalAlign={false}
              size="sm"
            />
            <span>
              Job Reschedule
            </span>
          </Title>
        }
        isOpen={false}
        labelId="pf-modal-part-4"
        onClose={[Function]}
        ouiaId="OUIA-Generated-Modal-small-4"
        ouiaSafe={true}
        showClose={true}
        title=""
        titleIconVariant={null}
        titleLabel=""
        variant="small"
      />
    </Portal>
  </Modal>
</JobsRescheduleModal>
`;
